--- a/scss/hyper.scss
+++ b/scss/hyper.scss
@@ -6,7 +6,8 @@ body {
 @import "./text"; // Text Related Styles
 @import "./alignment"; // Alignments
 @import "./visibility"; // Visibility
-@import "./spacing.scss"; // Spacing
-@import "./sizing.scss"; // Sizing
-@import "./overflow.scss"; // Overflow
-@import "./interactions.scss"; // Interactions
+@import "./spacing"; // Spacing
+@import "./sizing"; // Sizing
+@import "./overflow"; // Overflow
+@import "./interactions"; // Interaction
+@import "./color"; // Color
