--- a/css/hyper.css
+++ b/css/hyper.css
@@ -459,6 +459,30 @@ body {
   vertical-align: text-bottom !important;
 }
 
+.ai-center {
+  align-items: center;
+}
+
+.ai-start {
+  align-items: start;
+}
+
+.ai-end {
+  align-items: end;
+}
+
+.ai-flex-start {
+  align-items: flex-start;
+}
+
+.ai-flex-end {
+  align-items: flex-end;
+}
+
+.ai-baseline {
+  align-items: baseline;
+}
+
 .visible {
   visibility: visible !important;
 }
@@ -887,34 +911,6 @@ body {
   padding-bottom: auto !important;
 }
 
-.gap-0 {
-  gap: 0rem !important;
-}
-
-.gap-1 {
-  gap: 0.25rem !important;
-}
-
-.gap-2 {
-  gap: 0.5rem !important;
-}
-
-.gap-3 {
-  gap: 1rem !important;
-}
-
-.gap-4 {
-  gap: 1.5rem !important;
-}
-
-.gap-5 {
-  gap: 3rem !important;
-}
-
-.gap-auto {
-  gap: autorem !important;
-}
-
 .w-20 {
   width: 20% !important;
 }
@@ -1246,6 +1242,74 @@ body {
 
 .pe-none {
   pointer-events: none !important;
+}
+
+.sb-auto {
+  scroll-behavior: auto;
+}
+
+.sb-smooth {
+  scroll-behavior: smooth;
+}
+
+.bg-success {
+  background-color: #1b5e20;
+}
+
+.text-success {
+  color: #1b5e20;
+}
+
+.border-success {
+  border-color: #1b5e20;
+}
+
+.bg-warning {
+  background-color: #f9a825;
+}
+
+.text-warning {
+  color: #f9a825;
+}
+
+.border-warning {
+  border-color: #f9a825;
+}
+
+.bg-danger {
+  background-color: #b71c1c;
+}
+
+.text-danger {
+  color: #b71c1c;
+}
+
+.border-danger {
+  border-color: #b71c1c;
+}
+
+.bg-info {
+  background-color: #0d47a1;
+}
+
+.text-info {
+  color: #0d47a1;
+}
+
+.border-info {
+  border-color: #0d47a1;
+}
+
+.bg-muted {
+  background-color: #263238;
+}
+
+.text-muted {
+  color: #263238;
+}
+
+.border-muted {
+  border-color: #263238;
 }
 
 /*# sourceMappingURL=hyper.css.map */
